--- a/nbaApp/app1/static/app1/stylesheet.css
+++ b/nbaApp/app1/static/app1/stylesheet.css
@@ -66,7 +66,7 @@
     right: 120px;
 }
 
-.viewmore {
+.view-more {
 	color: #8A2E8A; 
 	font-family: "Courier New", Courier, monospace; 
 	float: right; 
