new background pictures and fixed positioning of UI

--- a/nbaApp/app1/static/app1/style.css
+++ b/nbaApp/app1/static/app1/style.css
@@ -22,11 +22,12 @@
 	padding-top: 15px;
 	padding-bottom: 20px;
 	height: 210px;
+	min-height: 210px;
 }
 
 .info {
+	position: absolute;
 	margin-top: 20px;
-	display: block;
 	float: left;
 	margin-left: 30px;
 }
@@ -41,14 +42,13 @@
 
 .stats {
 	margin-top: 27px;
-	display: block;
 	float: left;
 	font-family: Georgia, serif;
 	color: white; 
 	border: 2px solid white; 
 	border-collapse: collapse;
 	position: absolute;
-	right: 300px;
+	margin-left: 300px;
 }
 
 .stats th, td {
@@ -63,16 +63,17 @@
 	position: absolute;
     height: 200px;
     width: 150px;
-    right: 120px;
+    float: left;
+    margin-left: 1000px;
 }
 
 .view-more {
 	color: #8A2E8A; 
 	font-family: "Courier New", Courier, monospace; 
-	float: right; 
+	float: left; 
 	margin-top: 207px; 
 	position: absolute;
-	right: 125px
+	margin-left: 1045px;
 }
 
 #search {
@@ -81,19 +82,16 @@
 	display: block;
 	margin: 0 auto;
 	margin-bottom: 5px;
-	outline-color: black;
+	border: 2px solid black;
 	font-size: 35px;
 	color: #B2CCCC
 }
 
 #body-container {
-	background-color: #269;
-	background-image: linear-gradient(white 2px, transparent 2px), 
-					  linear-gradient(90deg, white 2px, transparent 2px), 
-					  linear-gradient(rgba(255,255,255,.3) 1px, transparent 1px),
-					  linear-gradient(90deg, rgba(255,255,255,.3) 1px, transparent 1px);
-	background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
-	background-position: -2px -2px, -2px -2px, -1px -1px, -1px -1px;
+	background-image: url("images/floor.jpg");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+	
 }
 
 #advSearch {
@@ -107,7 +105,7 @@
 }
 
 #advSearch > a {
-	color: black;
+	color: #85A7A7;
 	font-weight: bold;
 }
 
