--- a/nbaApp/app1/templates/app1/index.html
+++ b/nbaApp/app1/templates/app1/index.html
@@ -5,8 +5,7 @@
 
 
 <body id = 'body-container'> 
-<input id = 'search' type = 'text' name = 'playername'  value = 'Search Players' >
-</input>
+<input id = 'search' type = 'text' name = 'playername'  value = 'Search Players' ></input>
 <div id = 'advSearch'><a> Advanced Search </a></div>
 {% if player_list %}
 	<div id = 'accordion-container'>
