--- a/nbaApp/app1/templates/app1/main.html
+++ b/nbaApp/app1/templates/app1/main.html
@@ -3,10 +3,9 @@
 {% load staticfiles %}
 <link rel="stylesheet" type="text/css" href="{% static 'app1/main.css' %}">
 
-
 <body id = 'body-container'> 
 <input id = 'search' type = 'text' name = 'playername'  value = 'Search Players' ></input>
 <div id = 'advSearch'><a> Advanced Search </a></div>
 </body>
 
-<script type = "text/javascript" src = "{% static 'app1/script.js' %}"></script>
+<script type = "text/javascript" src = "{% static 'app1/main.js' %}"></script>
