--- a/nbaApp/app1/templates/app1/apidocs.html
+++ b/nbaApp/app1/templates/app1/apidocs.html
@@ -12,14 +12,7 @@
 <body>
   <div class="container">
     <div class="header clearfix">
-      <nav>
-        <ul class="nav nav-pills pull-right">
-          <li role="presentation" class="active"><a href="#">Home</a></li>
-          <li role="presentation"><a href="#">About</a></li>
-          <li role="presentation"><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-      <h3 class="text-muted">Project name</h3>
+      <h3 class="text-muted">API Documentation</h3>
     </div>
     <div class="panel panel-info">
       <div class="panel-heading"><b>Authentication Token</b></div>
