modifications to files affected by paradigm change

--- a/nbaApp/app1/templates/app1/profile.html
+++ b/nbaApp/app1/templates/app1/profile.html
@@ -5,7 +5,7 @@
 	<span class = 'info'>
 		<span><b> Team: </b> {{ player.team }} </span></br>
 		<span><b> Position: </b> {{ player.position}} </span></br>
-		<span><b> Draft Year: </b> {{ player.draft_year }} </span></br>
+		<span><b> Draft Year: </b> {{ player.year_enter_league }} </span></br>
 		<span><b> Height: </b> {{ player.height }} </span></br>
 		<span><b> Weight: </b> {{ player.weight }} </span>
 	</span>
