--- a/nbaApp/app1/templates/app1/query.html
+++ b/nbaApp/app1/templates/app1/query.html
@@ -13,7 +13,7 @@
 			<div class = 'content'>
 				<span class = 'info'>
 					<span><b> Team: </b> {{ player.stats.team }} </span></br>
-					<span><b> Draft Year: </b> {{ player.info.draft_year }} </span></br>
+					<span><b> Draft Year: </b> {{ player.info.year_enter_league }} </span></br>
 					<span><b> Height: </b> {{ player.info.height }} </span></br>
 					<span><b> Weight: </b> {{ player.info.weight }} </span>
 				</span>
