--- a/nbaApp/app1/templates/app1/main.html
+++ b/nbaApp/app1/templates/app1/main.html
@@ -1,11 +1,18 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 {% load staticfiles %}
-<link rel="stylesheet" type="text/css" href="{% static 'app1/main.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'app1/css/main.css' %}">
 
-<body id = 'body-container'> 
-<input id = 'search' type = 'text' name = 'playername'  value = 'Search Players' ></input>
-<div id = 'advSearch'><a> Advanced Search </a></div>
+<body id = 'body-container'>
+	<div class="row">
+		<div class="col-md-6 col-md-offset-3 input-group input-group-lg">
+			<input id = 'search' type = 'text' name = 'playername'  placeholder = 'Search Players' />
+			<span id = "advSearch"><a href="/player_list/advsearch/"> Advanced Search </a></span>
+		</div>
+	</div>
 </body>
 
-<script type = "text/javascript" src = "{% static 'app1/main.js' %}"></script>
+<script type = "text/javascript" src = "{% static 'app1/js/main.js' %}"></script>
