--- a/nbaApp/app1/templates/app1/apidocs.html
+++ b/nbaApp/app1/templates/app1/apidocs.html
@@ -48,19 +48,19 @@
               <td>name</td>
               <td>string</td>
               <td><span class="required-param"><span class="glyphicon glyphicon-remove"></span></span></td>
-              <td>Full name of player</td>
+              <td>First and last name of player</td>
             </tr>
             <tr>
               <td>draft_year</td>
               <td>int</td>
               <td><span class="required-param"><span class="glyphicon glyphicon-remove"></span></span></td>
-              <td>Draft year</td>
+              <td>Year player entered league (format: yyyy)</td>
             </tr>
             <tr>
               <td>position</td>
               <td>string</td>
               <td><span class="required-param"><span class="glyphicon glyphicon-remove"></span></span></td>
-              <td>One of of 5 basketball positions</td>
+              <td>One of: Guard, Forward, Center</td>
             </tr>
           </tbody>
         </table>
@@ -91,7 +91,7 @@
         </div>
         <br/>
         <h4 class="endpoint-title">Resource</h4>
-        <p class="well well-sm resource"><code>GET /api/statistics</code></p>
+        <p class="well well-sm resource"><code>GET /api/past_statistics</code></p>
         <h4 class="endpoint-title">Query Parameters</h4>
         <table class="table table-striped">
           <thead>
@@ -107,20 +107,20 @@
               <td>name</td>
               <td>string</td>
               <td><span class="required-param"><span class="glyphicon glyphicon-ok"></span></span></td>
-              <td>Full name of player</td>
+              <td>First and last name of player</td>
             </tr>
             <tr>
               <td>season</td>
               <td>int</td>
               <td><span class="required-param"><span class="glyphicon glyphicon-remove"></span></span></td>
-              <td>Start year of NBA season</td>
+              <td>Start year of NBA season (format: yyyy)</td>
             </tr>
           </tbody>
         </table>
         <h4 class="endpoint-title">Request</h4>
         <p class="well well-sm resource">
           <code>
-            curl --request GET "http://127.0.0.1:8000/player_list/api/statistics?name=LeBron+James&season=2003" -H "Authorization: Token <i>AUTHENTICATION_TOKEN</i>"
+            curl --request GET "http://127.0.0.1:8000/player_list/api/past_statistics?name=LeBron+James&season=2003" -H "Authorization: Token <i>AUTHENTICATION_TOKEN</i>"
           </code>
         </p>
         <h4 class="endpoint-title">Response</h4>
