--- a/nbaApp/app1/templates/app1/main.html
+++ b/nbaApp/app1/templates/app1/main.html
@@ -5,6 +5,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 {% load staticfiles %}
 <link rel="stylesheet" type="text/css" href="{% static 'app1/css/main.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'app1/css/base.css' %}">
 
 <body id = 'body-container'>
 	<div class="row">
