--- a/nbaApp/app1/static/app1/css/query.css
+++ b/nbaApp/app1/static/app1/css/query.css
@@ -10,6 +10,10 @@
 	width: 95%;
 }
 
+.player-pill:focus {
+	outline: 0;
+}
+
 .content {
 	padding-top: 10px;
 	background-color: black;
@@ -55,28 +59,12 @@
 }
 
 #search {
-	border: 4px solid black;
 	font-size: 35px;
 	margin-bottom: 5px;
-	width: 100%;
-	border-radius: 15px;
-}
-
-#body-container {
-	background-image: url("../images/floor.jpg");
 }
 
 #advSearch {
-	text-align: right;
-	font-family: Arial;
-	font-size: 20px;
-	float: right;
 	margin-bottom: 10px;
-}
-
-#advSearch > a {
-	color: black;
-	font-weight: bold;
 }
 
 #noResults {
