added pagination for search results

--- a/nbaApp/app1/templates/app1/main.html
+++ b/nbaApp/app1/templates/app1/main.html
@@ -8,10 +8,12 @@
 <link rel="stylesheet" type="text/css" href="{% static 'app1/css/base.css' %}">
 
 <body id = 'body-container'>
-	<div class="row">
-		<div class="col-md-6 col-md-offset-3 input-group input-group-lg">
-			<input id = 'search' type = 'text' name = 'playername'  placeholder = 'Search Players' />
-			<span id = "advSearch"><a href="/player_list/advsearch/"> Advanced Search </a></span>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3 input-group input-group-lg">
+				<input id = 'search' type = 'text' name = 'playername'  placeholder = 'Search Players' />
+				<span id = "advSearch"><a href="/player_list/advsearch/"> Advanced Search </a></span>
+			</div>
 		</div>
 	</div>
 </body>
