--- a/nbaApp/app1/static/app1/css/query.css
+++ b/nbaApp/app1/static/app1/css/query.css
@@ -7,7 +7,7 @@
 	text-align: left;
 	border: 2px solid black;
 	margin: 0 auto; display: block;
-	width: 95%;
+	width: 1400px;
 }
 
 .player-pill:focus {
@@ -18,7 +18,7 @@
 	padding-top: 10px;
 	background-color: black;
 	border: 2px solid black;
-	width: 93%;
+	width: 1330px;
 	margin: 0 auto;
 	display: block;
 }
