accordion-ify only when all results there

--- a/nbaApp/app1/static/app1/css/query.css
+++ b/nbaApp/app1/static/app1/css/query.css
@@ -82,3 +82,11 @@
 	display: block;
 	margin: 0 auto;
 }
+
+#accordion-container {
+	display: none;
+}
+
+#pagination-container {
+	display: none;
+}
