--- a/nbaApp/app1/templates/app1/query.html
+++ b/nbaApp/app1/templates/app1/query.html
@@ -76,7 +76,7 @@
 		<div id = 'noResults'><span>No results found</span></div>
 		{% endif %}
 
-		<div class="pull-right">
+		<div id="pagination-container" class="pull-right">
 		{% if page_range %}
 			<ul class="pagination pagination-lg">
 			{% for p in page_range %}
