--- a/nbaApp/app1/templates/app1/apidocs.html
+++ b/nbaApp/app1/templates/app1/apidocs.html
@@ -8,8 +8,10 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   {% load staticfiles %}
   <link rel="stylesheet" type="text/css" href="{% static 'app1/css/apidocs.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'app1/css/footer.css' %}">
 </head>
 <body>
+  <div class="wrapper">
   <div class="container">
     <div class="header clearfix">
       <h3 class="text-muted">API Documentation</h3>
@@ -152,9 +154,9 @@
         </div>
       </div>
     </div>
-    <footer class="footer">
-      <p>&copy; LIT 2015</p>
-    </footer>
-  </div> 
+  </div>
+  <div class="push"></div>
+</div>
+  {% include "app1/footer.html" %}
 </body>
 </html>
