--- a/nbaApp/app1/templates/app1/query.html
+++ b/nbaApp/app1/templates/app1/query.html
@@ -11,7 +11,7 @@
 			<div class="row">
 				<div class="col-md-offset-1 col-md-10">
 					<input id = 'search' type = 'text' name = 'playername'  placeholder = 'Search Players' />
-					<span id = "advSearch"><a href="/player_list/advsearch/"> Advanced Search </a></span>
+					<span id = "advSearch"><a href="/advsearch/"> Advanced Search </a></span>
 				</div>
 			</div>
 			{% if player_list %}
