--- a/nbaApp/app1/templates/app1/footer.html
+++ b/nbaApp/app1/templates/app1/footer.html
@@ -4,8 +4,8 @@
 			<div class="col-md-6 col-md-offset-3">
 				<hr>
 				<ul class="list-inline">
-					<li><a id="home" class="footer-link" href="/player_list/">Home</a></li>
-					<li><a class="footer-link" href="/player_list/api/">API</a></li>
+					<li><a id="home" class="footer-link" href="/">Home</a></li>
+					<li><a class="footer-link" href="/api/">API</a></li>
 					<li><a id="contact-us" class="footer-link" href="#">Contact Us</a></li>
 				</ul>
 			</div>
