--- a/nbaApp/app1/templates/app1/main.html
+++ b/nbaApp/app1/templates/app1/main.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 input-group input-group-lg">
 					<input id = 'search' type = 'text' name = 'playername'  placeholder = 'Search Players' />
-					<span id = "advSearch"><a href="/player_list/advsearch/"> Advanced Search </a></span>
+					<span id = "advSearch"><a href="/advsearch/"> Advanced Search </a></span>
 				</div>
 			</div>
 		</div>
