added contact us page

--- a/nbaApp/app1/templates/app1/footer.html
+++ b/nbaApp/app1/templates/app1/footer.html
@@ -6,7 +6,7 @@
 				<ul class="list-inline">
 					<li><a id="home" class="footer-link" href="/">Home</a></li>
 					<li><a class="footer-link" href="/api/">API</a></li>
-					<li><a id="contact-us" class="footer-link" href="#">Contact Us</a></li>
+					<li><a id="contact-us" class="footer-link" href="/contact/">Contact Us</a></li>
 				</ul>
 			</div>
 		</div>
