--- a/nbaApp/app1/templates/app1/query.html
+++ b/nbaApp/app1/templates/app1/query.html
@@ -1,9 +1,12 @@
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-{% load staticfiles %}
-<link rel="stylesheet" type="text/css" href="{% static 'app1/css/query.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'app1/css/base.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'app1/css/footer.css' %}">
+<head>
+	<title>{{ search_query }} - Search Results</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+	{% load staticfiles %}
+	<link rel="stylesheet" type="text/css" href="{% static 'app1/css/query.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'app1/css/base.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'app1/css/footer.css' %}">
+</head>
 
 <body id = 'body-container'>
 	<div class="wrapper">
@@ -11,7 +14,6 @@
 			<div class="row">
 				<div class="col-md-offset-1 col-md-10">
 					<input id = 'search' type = 'text' name = 'playername'  placeholder = 'Search Players' />
-					<span id = "advSearch"><a href="/advsearch/"> Advanced Search </a></span>
 				</div>
 			</div>
 			{% if player_list %}
